--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,4 +1,4 @@
-name: Docker Image CI
+name: Docker Build
 
 on:
   push:
@@ -7,11 +7,8 @@ on:
     branches: [ "main" ]
 
 jobs:
-
-  build:
-
-    runs-on: docker:latest
-
+  deneme:
+    runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
     - name: Build the Docker image
