--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -17,7 +17,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
-    - name: Build the Docker image
+      name: Build the Docker image
       with:
         image: docker:19.03.12
         run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
