--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -21,3 +21,4 @@ jobs:
       with:
         image: docker:19.03.12
         run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
+        run: docker images
