--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -7,19 +7,11 @@ on:
     branches: [ "main" ]
 
 jobs:
-  deneme:
+  Docker Login:
     runs-on: ubuntu-latest
     steps:
-    - name: Echo Command
-      run: echo Github Action
-
-  build:
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v3
-      name: Build the Docker image
-      with:
-        image: docker:19.03.12
-        run: |
-          docker build . --file Dockerfile --tag my-image-name:$(date +%s)
-          docker images
+    -   name: Login to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: hasanertenli13
+          password: dckr_pat_JhoReBYQxOyKb0XPaLriWtfbdDk
