--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -7,7 +7,7 @@ on:
     branches: [ "main" ]
 
 jobs:
-  Docker Login:
+  docker-login:
     runs-on: ubuntu-latest
     steps:
     -   name: Login to Docker Hub
