--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -10,8 +10,13 @@ jobs:
   docker-login:
     runs-on: ubuntu-latest
     steps:
-    -   name: Login to Docker Hub
-        uses: docker/login-action@v2
-        with:
-          username: hasanertenli13
-          password: dckr_pat_JhoReBYQxOyKb0XPaLriWtfbdDk
+    - name: Login to Docker Hub
+      uses: docker/login-action@v2
+      with:
+        username: hasanertenli13
+        password: dckr_pat_JhoReBYQxOyKb0XPaLriWtfbdDk
+  docker-build:
+    runs-on: ubuntu-latest
+    steps:
+    - name: Set up Docker Build
+      uses: docker/setup-buildx-actions@v2
